<resources>
    <string name="app_name">TODO Application</string>
    <string name="title_todo">Title</string>
    <string name="description_todo">Description</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="discard">Discard</string>
    <string name="save_todo">Save</string>
    <string name="category_hint">Category</string>
    <string name="add_category_button">add category</string>
    <string name="categoryTitle">Add Category</string>
    <string name="categories_menu">Categories</string>
    <string name="open_to_do">Open to Do</string>
    <string name="todoTitle">Your Todos</string>
    <string name="addTodo">Add a TODO</string>
</resources>
